Cleaned up POM properties.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <packaging>jar</packaging>
 
     <properties>
+        <junit.version>4.10</junit.version>
+        <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.6.6</slf4j.version>
     </properties>
 
@@ -17,13 +19,13 @@
         <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
         <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
