--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
     </licenses>
 
     <scm>
-        <developerConnection>scm:git:ssh://git@github.com/tfoxcroft/recurly_integration.git</developerConnection>
-        <connection>scm:git:ssh://git@github.com/tfoxcroft/recurly_integration.git</connection>
-        <url>https://github.com/tfoxcroft/recurly_integration/tree/1_0</url>
+        <developerConnection>scm:git:ssh://github.com/tfoxcroft/recurly_integration.git</developerConnection>
+        <connection>scm:git:ssh://github.com/tfoxcroft/recurly_integration.git</connection>
+        <url>http://github.com/tfoxcroft/recurly_integration</url>
     </scm>
 
     <developers>
@@ -58,7 +58,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.3.2</version>
                 <configuration>
                     <mavenExecutorId>forked-path</mavenExecutorId>
                 </configuration>
