[maven-release-plugin] prepare release recurly-integration-library-2.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.tfoxcroft</groupId>
     <artifactId>recurly-integration-library</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <packaging>jar</packaging>
 
     <name>Recurly Integration Library</name>
@@ -29,6 +29,7 @@
         <developerConnection>scm:git:ssh://git@github.com/tfoxcroft/recurly_integration.git</developerConnection>
         <connection>scm:git:ssh://git@github.com/tfoxcroft/recurly_integration.git</connection>
         <url>http://github.com/tfoxcroft/recurly_integration</url>
+    <tag>recurly-integration-library-2.1.0</tag>
   </scm>
 
     <developers>
