POM updates in preparation for releasing to Maven Central.

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <name>Recurly Integration Library</name>
-    <description>Client library for integrating with Recurly's RecurlyJS</description>
+    <description>Client library for integrating with Recurly's RecurlyJS and Rest API</description>
     <url>http://tfoxcroft.github.com/recurly_integration</url>
 
     <licenses>
@@ -29,7 +29,7 @@
         <developerConnection>scm:git:ssh://git@github.com/tfoxcroft/recurly_integration.git</developerConnection>
         <connection>scm:git:ssh://git@github.com/tfoxcroft/recurly_integration.git</connection>
         <url>http://github.com/tfoxcroft/recurly_integration</url>
-        <tag>recurly-integration-library-2.1.0</tag>
+        <tag>recurly-integration-library-2.2.0</tag>
   </scm>
 
     <developers>
