--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,17 @@
 
     <groupId>com.github.tfoxcroft</groupId>
     <artifactId>recurly-integration-library</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Recurly Integration Library</name>
     <description>Client library for integrating with Recurly's RecurlyJS and Rest API</description>
     <url>http://tfoxcroft.github.com/recurly_integration</url>
+
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/tfoxcroft/recurly_integration/issues</url>
+    </issueManagement>
 
     <licenses>
         <license>
