--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.tfoxcroft</groupId>
     <artifactId>recurly-integration-library</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
     <packaging>jar</packaging>
 
     <name>Recurly Integration Library</name>
@@ -35,7 +35,7 @@
         <connection>scm:git:ssh://git@github.com/tfoxcroft/recurly_integration.git</connection>
         <url>http://github.com/tfoxcroft/recurly_integration</url>
         <tag>recurly-integration-library-2.2.0</tag>
-  </scm>
+    </scm>
 
     <developers>
     </developers>
