--- a/pom.xml
+++ b/pom.xml
@@ -80,18 +80,26 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
-                    <excludes>
-                        <exclude>**/RecurlyAccountWebServiceTest.java</exclude>
-                        <exclude>**/RecurlyInvoiceWebServiceTest.java</exclude>
-                        <exclude>**/RecurlyPlanWebServiceTest.java</exclude>
-                        <exclude>**/RecurlySubscriptionWebServiceTest.java</exclude>
-                    </excludes>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.13</version>-->
+                <!--<configuration>-->
+                    <!--<excludes>-->
+                        <!--<exclude>**/RecurlyAccountWebServiceTest.java</exclude>-->
+                        <!--<exclude>**/RecurlyInvoiceWebServiceTest.java</exclude>-->
+                        <!--<exclude>**/RecurlyPlanWebServiceTest.java</exclude>-->
+                        <!--<exclude>**/RecurlySubscriptionWebServiceTest.java</exclude>-->
+                    <!--</excludes>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
