--- a/pom.xml
+++ b/pom.xml
@@ -87,19 +87,19 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                <!--<version>2.13</version>-->
-                <!--<configuration>-->
-                    <!--<excludes>-->
-                        <!--<exclude>**/RecurlyAccountWebServiceTest.java</exclude>-->
-                        <!--<exclude>**/RecurlyInvoiceWebServiceTest.java</exclude>-->
-                        <!--<exclude>**/RecurlyPlanWebServiceTest.java</exclude>-->
-                        <!--<exclude>**/RecurlySubscriptionWebServiceTest.java</exclude>-->
-                    <!--</excludes>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/RecurlyAccountWebServiceTest.java</exclude>
+                        <exclude>**/RecurlyInvoiceWebServiceTest.java</exclude>
+                        <exclude>**/RecurlyPlanWebServiceTest.java</exclude>
+                        <exclude>**/RecurlySubscriptionWebServiceTest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
